--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,10 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #CAEB66;
+  --color-secondary: #03373D;
+}
